# Rusty

./: test.rs
ADvent/: Cargo.toml
ADvent/src/: main.rs
ADvent/src/2015_1/: sol.rs
ADvent/src/2024_1/: sol_1.rs
HTTP_server/: 404.html  Cargo.toml  hello.html
HTTP_server/src/: lib.rs  main.rs
Web_Scraper/: Cargo.toml
Web_Scraper/src/: main.rs  test.rs
lists/src/: first.rs
minigrep/: todo.txt
minigrep/src/: Code.code-workspace  lib.rs  main  main.rs  read.rs  todo.txt
minigrep/src/read/: mod.rs
multithread/src/: main.rs
pong/: Cargo.toml
pong/src/: main.rs
