[package]
name = "Web_Scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = "0.12.7"
scraper = "0.20.0"
spider = "2.6.20"
tokio = {version = "1.40.0", features = ["full"]}

[[bin]]
name = "test"
path = "src/test.rs"